# run-cli

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs
src/cli/: mod.rs
src/run_codes/: mod.rs
src/sub_commands/: build.rs  credentials.rs  fetch.rs  init.rs  mod.rs  run.rs  send.rs  submit.rs  subscribe.rs  test.rs  update.rs  zip.rs
src/templates/: c.rs  mod.rs
src/utils/: mod.rs
src/zip/: mod.rs
templates/C/: Makefile  main.c
templates/C++/: Makefile  main.cpp
templates/C++/src/: add.cpp  add.hpp
templates/C/src/: add.h
templates/Python 3/: Makefile  main.py
templates/ZIP Makefile/: Makefile
templates/ZIP-Makefile/: Makefile
