[package]
description = "A run.codes cli front end with some extra features."
edition = "2021"
name = "run-cli"
version = "0.1.4"


[dependencies]
clap = {version = "3.1.8", features = ["derive", "cargo"]}
reqwest = { version = "0.11", features = ["blocking", "cookies", "json"] }
rpassword = "6.0"
scraper = "0.12.0"
html2md = "0.2.13"
git2 = "0.14.2"
zip = "0.6.2"
dialoguer = "0.10.0"
chrono = "0.4.19"
serde = "1.0"
toml = "0.5.9"
home = "0.5.3"
colored = "2.0.0"
rust-embed = "6.4.0"
