[package]
description = "A run.codes cli front end with some extra features."
edition = "2021"
name = "run-cli"
version = "0.9.1"

[dependencies]
chrono = "0.4.19"
clap = {version = "3.1.8", features = ["derive", "cargo"]}
colored = "2.0.0"
dialoguer = "0.10.0"
git2 = "0.14.2"
home = "0.5.3"
html2md = "0.2.13"
reqwest = {version = "0.11", features = ["blocking", "cookies", "json", "multipart"]}
rpassword = "6.0"
rust-embed = "6.4.0"
scraper = "0.12.0"
serde = "1.0"
toml = "0.5.9"
zip = "0.6.2"
